--- a/.gitignore
+++ b/.gitignore
@@ -2,32 +2,57 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Virtual Environment
-venv/
-env/
-ENV/
-VENV/
-*.venv
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Django
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+media/
+staticfiles/
+
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
 
 # Node
 node_modules/
-npm-debug.log
-yarn-error.log
-package-lock.json # if not committed by team preference, for personal it's often good to commit
-# build/ # Common for React builds, but sometimes needed
-# .DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDE and OS files
-.vscode/
-.idea/
-*.swp
-*~
-.DS_Store
-Thumbs.db 
+# Build
+/build
+/dist 
