--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ psycopg2-binary==2.9.9
 django-filter==24.1
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
+gunicorn==21.2.0
+dj-database-url==2.1.0
