Fix: Add robust build and start scripts to handle gunicorn installation issues

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: mortgauge-django-api
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn mortgauge_project.wsgi:application
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: chmod +x start.sh && ./start.sh
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
